--- a/src/main/resources/templates/hello-world.html
+++ b/src/main/resources/templates/hello-world.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container mt-4">
         <h1>Hello World!</h1>
+        <h1>Hello, <span th:text="${name}">User</span>!</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
