--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -15,6 +15,14 @@
     background-color: #aed6f1;
 }
 
+.parent-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Distributes children with space between them */
+    align-items: center; /* Centers them horizontally */
+    height: 100%; /* Ensure it has enough height to space out the elements */
+}
+
 .main-display {
     width: 640px;
     height: 480px;
@@ -29,6 +37,7 @@
     flex-direction: row;
     justify-content: space-around;
     height: 50%;
+    margin-bottom: 20px;
 }
 
 .info-holder {
@@ -42,12 +51,15 @@
     background-color: #5cace0;
     border-radius: 32px;
     width: 280px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .days-holder {
     display: flex;
     flex-direction: row;
-
+    justify-content: space-evenly;
 }
 
 .day-option {
@@ -55,5 +67,10 @@
     border-radius: 32px;
     display: flex;
     flex-grow: 1;
-    height: 144px;
+    width: 64px;
+    height: 120px;
+    border-width: 0;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 40%;
 }
