--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,12 @@
 
 <header class="header">
     <div class="header-content">
+
+        <img
+                src="/images/OpenCloud.png"
+                alt="Company Logo"
+        />
+
         <h1 class="app-name">OpenCloud</h1>
     </div>
 </header>
